// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`aws-fargate-to-container-apps - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Migrate AWS Fargate (ECS/EKS) workloads to Azure Container Apps with assessment, service mapping, and deployment guidance. WHEN: migrate Fargate to Container Apps, migrate ECS tasks to Container Apps, Fargate to ACA, convert Fargate task definitions to Container Apps, assess Fargate workload for Azure. DO NOT USE FOR: general AWS-to-Azure migration (use azure-cloud-migrate), new Container Apps deployments without migration (use azure-prepare).",
  "extractedKeywords": [
    "apps",
    "assess",
    "assessment",
    "authentication",
    "aws",
    "aws-to-azure",
    "azure",
    "azure-cloud-migrate",
    "azure-prepare",
    "bicep",
    "cli",
    "container",
    "convert",
    "definitions",
    "deploy",
    "deployment",
    "deployments",
    "fargate",
    "function",
    "general",
    "guidance",
    "identity",
    "key vault",
    "kubernetes",
    "mapping",
    "mcp",
    "migrate",
    "migration",
    "monitor",
    "networking",
    "security",
    "service",
    "task",
    "tasks",
    "validation",
    "when",
    "with",
    "without",
    "workload",
    "workloads",
  ],
  "name": "aws-fargate-to-container-apps",
}
`;

exports[`aws-fargate-to-container-apps - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assess",
  "assessment",
  "authentication",
  "aws",
  "aws-to-azure",
  "azure",
  "azure-cloud-migrate",
  "azure-prepare",
  "bicep",
  "cli",
  "container",
  "convert",
  "definitions",
  "deploy",
  "deployment",
  "deployments",
  "fargate",
  "function",
  "general",
  "guidance",
  "identity",
  "key vault",
  "kubernetes",
  "mapping",
  "mcp",
  "migrate",
  "migration",
  "monitor",
  "networking",
  "security",
  "service",
  "task",
  "tasks",
  "validation",
  "when",
  "with",
  "without",
  "workload",
  "workloads",
]
`;
